# k9copy

./: AUTHORS  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.files  configure.in  configure.in.in  subdirs
admin/: cvs.sh
doc/: Makefile.am  Makefile.in
doc/k9copy/: Makefile.am  Makefile.in  index.docbook
dvdread/: Makefile.am  dvd_reader.c  dvd_udf.c  ifo_read.c  ifo_read.h  ifo_types.h  nav_read.c  nav_read.h
k9Mplayer/: Makefile.am  factory.cpp  k9mplayer.cpp  k9mplayer.h  mplayer.ui
k9author/: Makefile.am  chapterEdit.ui  import.ui  k9avidecode.cpp  k9avidecode.h  k9avifile.cpp  k9avifile.h  k9canvasselection.cpp  k9canvasselection.h  k9chapteredit.cpp  k9chapteredit.h  k9import.cpp  k9import.h  k9importfiles.cpp  k9importfiles.h  k9lvitemimport.cpp  k9lvitemimport.h  k9menu.cpp  k9menu.h  k9menubutton.cpp  k9menubutton.h  k9menuedit.cpp  k9menuedit.h  k9menueditor.cpp  k9menueditor.h  k9newdvd.cpp  k9newdvd.h  k9newtitle.cpp  k9newtitle.h  k9title.cpp  k9title.h  menuEdit.ui  newTitle.ui
k9decmpeg/: Makefile.am  Makefile.in  cpu_accel.cpp  cpu_state.cpp  decode.cpp  header.cpp  idct.cpp  idct_alpha.cpp  idct_altivec.cpp  idct_mmx.cpp  k9decodethread.cpp  k9decodethread.h  k9plaympeg2.cpp  k9plaympeg2.h  kdecmpeg2.cpp  kdecmpeg2.h  motion_comp.cpp  motion_comp_alpha.cpp  motion_comp_altivec.cpp  motion_comp_mmx.cpp  motion_comp_vis.cpp  rgb.cpp  rgb_mmx.cpp  rgb_vis.cpp  slice.cpp  uyvy.cpp
k9devices/: Makefile.am  Makefile.in  configure.in.in  k9cddrive.cpp  k9cddrive.h  k9dbusdispatch.cpp  k9dbusdispatch.h  k9halconnection.cpp  k9halconnection.h  k9haldevice.cpp  k9haldevice.h
k9vamps/: Makefile.am  Makefile.in  ac.h  cputest.cpp  k9fifo.cpp  k9fifo.h  k9requant.cpp  k9requant.h  k9requant2.cpp  k9requant2.h  k9vamps.cpp  k9vamps.h  tcmemcpy.cpp
libdvdnav/: Makefile.am  Makefile.in  common.h  decoder.c  decoder.h  dvd_reader.c  dvdnav.c  dvdnav.h  dvdnav_internal.h  dvdread.c  dvdread.h  highlight.c  ifo_read.c  md5.c  md5.h  navigation.c  read_cache.c  remap.c  searching.c  settings.c  vm.c  vm.h  vmcmd.c  vmcmd.h
libk3bdevice/: Makefile.am  Makefile.in  configure.in.in  k3bcdtext.cpp  k3bcdtext.h  k3bcrc.cpp  k3bcrc.h  k3bdevice.cpp  k3bdevice.h  k3bdevice_mmc.cpp  k3bdeviceglobals.cpp  k3bdeviceglobals.h  k3bdevicemanager.cpp  k3bdevicemanager.h  k3bdevicetypes.h  k3bdiskinfo.cpp  k3bdiskinfo.h  k3bmmc.h  k3bmsf.cpp  k3bmsf.h  k3bscsicommand.cpp  k3bscsicommand.h  k3bscsicommand_bsd.cpp  k3bscsicommand_linux.cpp  k3btoc.cpp  k3btoc.h  k3btrack.cpp  k3btrack.h
libk9copy/: Makefile.am  Makefile.in  backupdlg.ui  dummy.cpp  dvdprogress.ui  k9audiocodecs.cpp  k9audiocodecs.h  k9backupdlg.cpp  k9backupdlg.h  k9burndvd.cpp  k9burndvd.h  k9cell.cpp  k9cell.h  k9cellcopylist.cpp  k9cellcopylist.h  k9common.h  k9config.cpp  k9config.h  k9drawimage.cpp  k9drawimage.h  k9dvd.cpp  k9dvd.h  k9dvdauthor.cpp  k9dvdauthor.h  k9dvdbackup.cpp  k9dvdbackup.h  k9dvdchapter.cpp  k9dvdchapter.h  k9dvdprogress.cpp  k9dvdprogress.h  k9dvdread.cpp  k9dvdread.h  k9dvdsize.cpp  k9dvdsize.h  k9dvdtitle.cpp  k9dvdtitle.h  k9dvdtitleset.cpp  k9dvdtitleset.h  k9ifo.cpp  k9ifo.h  (+24 more)
po/: Makefile.am  Makefile.in  ca.po  cs.po  de.po  el.po  en_GB.po  es.po  es_AR.po  fr.po  it.po  k9copy.pot  nl.po  pl.po  pt_BR.po  ru.po  sr.po  sr@Latn.po  sr@latin.po  tr.po  zh_TW.po
src/: MainDlg.ui.h  Makefile.am  Makefile.in  configDlg.ui  configDlg.ui.h  images.h  k9cddrive.cpp  k9cddrive.h  k9copy.cpp  k9copy.desktop  k9copy.h  k9copy_open.desktop  k9copyui.rc  k9glwidget.cpp  k9glwidget.h  k9langselect.cpp  k9langselect.h  k9main.cpp  k9main.h  k9mainw.ui  k9mainwsov.ui  k9mencodercmdgen.cpp  k9mencodercmdgen.h  k9mp4title.cpp  k9mp4title.h  k9play.cpp  k9play.h  k9playbackoptions.cpp  k9playbackoptions.h  k9prefauthor.cpp  k9prefauthor.h  k9prefdvd.cpp  k9prefdvd.h  k9prefmencoder.cpp  k9prefmencoder.h  k9prefmpeg4.cpp  k9prefmpeg4.h  k9prefpreview.cpp  k9prefpreview.h  k9settings.cpp  (+26 more)
src/icons/: Makefile.am
