
METASOURCES = AUTO
noinst_LTLIBRARIES = libdvdread.la
libdvdread_la_LDFLAGS = $(all_libraries)
libdvdread_la_SOURCES = dvd_input.c dvd_reader.c dvd_udf.c ifo_read.c md5.c \
	nav_read.c
noinst_HEADERS = bswap.h dvd_input.h dvd_reader.h dvd_udf.h dvdread_internal.h \
	ifo_read.h ifo_types.h md5.h nav_read.h nav_types.h
