INCLUDES = 
METASOURCES = AUTO

noinst_LTLIBRARIES = libdvdnav.la
libdvdnav_la_SOURCES = decoder.c decoder.h dvd_input.c dvd_input.h dvdnav.c \
	dvdnav_events.h dvdnav.h dvdnav_internal.h highlight.c md5.c md5.h navigation.c \
	read_cache.c read_cache.h remap.c remap.h searching.c settings.c vm.c vmcmd.c \
	vmcmd.h vm.h bswap.h dvd_reader.c dvd_reader.h dvdread_internal.h dvd_types.h \
	dvd_udf.c dvd_udf.h ifo_read.c ifo_read.h ifo_types.h nav_print.c nav_print.h \
	nav_read.c nav_read.h nav_types.h compat.h

