
METASOURCES = AUTO

noinst_LTLIBRARIES = libdvdnav.la
libdvdnav_la_SOURCES = decoder.c decoder.h dvdnav.c dvdnav_events.h dvdnav.h \
	dvdnav_internal.h highlight.c md5.c md5.h navigation.c read_cache.c read_cache.h remap.c \
	remap.h searching.c settings.c vm.c vmcmd.c vmcmd.h vm.h compat.h dvd_types.h

libdvdnav_la_LIBADD = -ldvdread
noinst_HEADERS = common.h
