
METASOURCES = AUTO

noinst_LTLIBRARIES = libk9dvdnav.la
libk9dvdnav_la_SOURCES = decoder.c decoder.h dvdnav.c dvdnav_events.h dvdnav.h \
		dvdnav_internal.h highlight.c navigation.c read_cache.c read_cache.h remap.c remap.h \
		searching.c settings.c vm.c vmcmd.c vmcmd.h vm.h compat.h dvd_types.h dvdread.c


noinst_HEADERS = common.h dvdread.h



